best-practices-vpol/require-probes/.chainsaw-test/bad-cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: reqprobes-badcronjob
spec:
  schedule: "*/5 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          containers:
          - name: app
            image: ghcr.io/kyverno/test-busybox:1.35
