best-practices-vpol/require-probes/.chainsaw-test/bad-pod-notall.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
  - name: busybox-again
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox-again
    image: ghcr.io/kyverno/test-busybox:1.35
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
---
# Sidecar container (init container with restartPolicy: Always) without any probe.
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
  labels:
    app: myapp
spec:
  initContainers:
  - name: sidecar
    image: ghcr.io/kyverno/test-busybox:1.35
    restartPolicy: Always
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
