best-practices-vpol/require-probes/.chainsaw-test/bad-replicationcontroller.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: reqprobes-badrc
spec:
  replicas: 1
  selector:
    app: reqprobes-badrc
  template:
    metadata:
      labels:
        app: reqprobes-badrc
    spec:
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
