best-practices-vpol/require-probes/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-probes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-probes.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: require-pod-probes
          spec:
            validationActions: [Deny]
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-pods.yaml
    - apply:
        file: good-podcontrollers.yaml
    - apply:
        file: good-cronjob.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy require-pod-probes failed')): true
        file: bad-cronjob.yaml
    - apply:
        file: good-replicationcontroller.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy require-pod-probes failed')): true
        file: bad-replicationcontroller.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy require-pod-probes failed')): true
        file: bad-pod-nothing.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy require-pod-probes failed')): true
        file: bad-pod-notall.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy require-pod-probes failed')): true
        file: bad-podcontrollers.yaml
